@@ -1,0 +1,4 @@
+	! { dg-do run }
+#include "cpp5.h"
+	IF (FOO().NE.1) CALL ABORT ()
+	END
