@@ -1,0 +1,3 @@
+	FUNCTION FOO()
+#include "cpp5inc.h"
+	END FUNCTION
