@@ -1,0 +1,1 @@
+	FOO = 1
