@@ -1,3 +1,10 @@
+2005-07-14  Jakub Jelinek  <jakub@redhat.com>
+
+	PR fortran/22417
+	* gfortran.dg/g77/cpp5.F: New test.
+	* gfortran.dg/g77/cpp5.h: New file.
+	* gfortran.dg/g77/cpp5inc.h: New file.
+
 2005-07-12  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR libfortran/16435
